fixing problem when clicking the first button ( the text was overlaping)

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -82,6 +82,7 @@ $weak-font-color: #757575;
       grid-row-end: 11;
       font-size: 2.5vh;
       font-weight: 100;
+      height:6vh;
     }
     .loginButton {
       grid-column-start: 6;
