--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -105,6 +105,7 @@
   grid-row-end: 11;
   font-size: 2.5vh;
   font-weight: 100;
+  height: 6vh;
 }
 
 .landingPage .topSection .loginButton {
